--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCREENNAME</title>
+    <title>Roasting_Cheif</title>
     <style>
         :root {
             --main-bg-color: #1a1a2e;
@@ -95,14 +95,14 @@
 </head>
 <body>
     <header>
-        <h1>SCREENNAME | ASW Hack Club</h1>
+        <h1>Roasting_Cheif | ASW Hack Club</h1>
     </header>
     <div class="container">
         <!-- Profile Section -->
         <div class="profile">
             <!-- Replace 'defaultavatar.png' with your avatar if available -->
             <img src="defaultavatar.png" alt="Profile Picture">
-            <h2>Screen Name</h2>
+            <h2>Roasting_Cheif</h2>
             <!-- Update this with your favorite programming language -->
             <p>Favorite Programming Language: <strong>Python</strong></p>
             <!-- Favorite OS Selection -->
