Roasting_Cheif.html

--- a/template.html
+++ b/template.html
@@ -109,7 +109,7 @@
             <div class="os-options">
                 <p>Favorite OS:</p>
                 <!-- Uncomment your preferred OS icon (changing it from linux means your weak - JK)-->
-                <img src="linux.png" alt="Linux" title="Linux">
+                <img src="windows.png" alt="Windows" title="Windows">
                 <!-- <img src="windows.png" alt="Windows" title="Windows"> -->
                 <!-- <img src="macosx.png" alt="macOS" title="macOS"> -->
             </div>
@@ -117,17 +117,29 @@
         <!-- About Me Section -->
         <div class="section">
             <h3>About Me</h3>
-            <p>Write about yourself here. Share your interests, background, or anything else!</p>
+            <p>I am Me. I don't think therefore I am not. 2010 Korea Class of 28</p>
         </div>
         <!-- Technologies Section -->
         <div class="section">
             <h3>Technologies I Know</h3>
-            <div class="tech-grid">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/android/android-original.svg" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/androidstudio/androidstudio-original.svg" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/apache/apache-original.svg" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/archlinux/archlinux-original.svg" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/arduino/arduino-original.svg" />
+            <div class="tech-grid">   
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/anaconda/anaconda-original-wordmark.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/apple/apple-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/arduino/arduino-plain-wordmark.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/blender/blender-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/c/c-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/chrome/chrome-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/json/json-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jupyter/jupyter-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mysql/mysql-original-wordmark.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/stackoverflow/stackoverflow-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/unrealengine/unrealengine-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/visualstudio/visualstudio-original.svg" />
             </div>
         </div>
         <!-- Projects Section -->
@@ -135,8 +147,8 @@
             <h3>Projects</h3>
             <!-- Example Project 1 -->
             <div class="project-item">
-                <h4>Project Title</h4>
-                <p>Short description of the project. Update the link below.</p>
+                <h4>BOBA TEA</h4>
+                <p></p>
                 <a href="#">Project Link</a>
             </div>
             <!-- Example Project 2 -->
